force-app/main/default/objects/Account/fields/Account_Logo__c.field-meta.xml
<CustomField>
    <fullName>Account_Logo__c</fullName>
    <description>This field is used to store the URL of the account logo.</description>
    <label>Account Logo</label>
    <type>Url</type>
</CustomField>