force-app/main/default/objects/Account/fields/Account_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Local__c</fullName>
    <label>Account Name[Local]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>