force-app/main/default/objects/Account/fields/API_Last_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>API_Last_Executed_Date__c</fullName>
    <label>API Last Executed Date</label>
    <type>DateTime</type>
</CustomField>