force-app/main/default/objects/Account/fields/City_Local__c.field-meta.xml
<CustomField>
    <fullName>City_Local__c</fullName>
    <label>City[Local]</label>
    <length>255</length>
    <type>Text</type>
</CustomField>