force-app/main/default/objects/Account/fields/Credit_Term__c.field-meta.xml
<CustomField>
    <fullName>Credit_Term__c</fullName>
    <description>Number of Days</description>
    <label>Credit Term</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>