force-app/main/default/objects/Account/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <description>It has been created for SAP Account Registration Form.</description>
    <label>Distribution Channel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>