force-app/main/default/objects/Account/fields/DUNS_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Account_Name__c</fullName>
    <label>DUNS Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>