force-app/main/default/objects/Account/fields/DUNS_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>DUNS_Location_Type__c</fullName>
    <label>DUNS Location Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>