force-app/main/default/objects/Account/fields/Duplicated__c.field-meta.xml
<CustomField>
    <fullName>Duplicated__c</fullName>
    <label>Duplicated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>