force-app/main/default/objects/Account/fields/Duplicated_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Duplicated_Pattern__c</fullName>
    <label>Duplicated Pattern</label>
    <length>255</length>
    <type>Text</type>
</CustomField>