force-app/main/default/objects/Account/fields/GBPM_Delete_Flag__c.field-meta.xml
<CustomField>
    <fullName>GBPM_Delete_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies if this account is deleted in SAP or not</description>
    <label>GBPM Delete Flag</label>
    <type>Checkbox</type>
</CustomField>