force-app/main/default/objects/Account/fields/GDPR_Related_Country__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Related_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify if the country is a EEA country or not</description>
    <label>GDPR Related Country</label>
    <type>Checkbox</type>
</CustomField>