force-app/main/default/objects/Account/fields/Has_Asset__c.field-meta.xml
<CustomField>
    <fullName>Has_Asset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check the dummy plant as or not.</description>
    <label>Has Asset</label>
    <type>Checkbox</type>
</CustomField>