force-app/main/default/objects/Account/fields/Incoterms__c.field-meta.xml
<CustomField>
    <fullName>Incoterms__c</fullName>
    <description>It has been created for common registration form PDF Template.</description>
    <label>Incoterms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>