force-app/main/default/objects/Account/fields/Industry_Type__c.field-meta.xml
<CustomField>
    <fullName>Industry_Type__c</fullName>
    <label>Industry Type</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>