force-app/main/default/objects/Account/fields/Integration_G1SMS_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_G1SMS_Id__c</fullName>
    <description>Field to hold unique account identifier from Global OneSMS</description>
    <externalId>true</externalId>
    <label>Global OneSMS Account Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>