force-app/main/default/objects/Account/fields/Integration_G1SMS_No__c.field-meta.xml
<CustomField>
    <fullName>Integration_G1SMS_No__c</fullName>
    <description>Field to hold the unique account number from Global OneSMS</description>
    <externalId>true</externalId>
    <label>Global OneSMS Account No</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>