force-app/main/default/objects/Account/fields/Integration_YGSSAP_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_YGSSAP_Id__c</fullName>
    <description>Unique Id in external system</description>
    <externalId>true</externalId>
    <label>GBPM Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>