force-app/main/default/objects/Account/fields/Integration_YHQSA_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_YHQSA_Id__c</fullName>
    <description>Field to hold the unique Plant Id from YHQ ServAir</description>
    <externalId>true</externalId>
    <label>Plant Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>