force-app/main/default/objects/Account/fields/IntegrationId_YGSSAP__c.field-meta.xml
<CustomField>
    <fullName>IntegrationId_YGSSAP__c</fullName>
    <description>Unique Id in external system</description>
    <externalId>true</externalId>
    <label>GBPM Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>