force-app/main/default/objects/Account/fields/Language_Code__c.field-meta.xml
<CustomField>
    <fullName>Language_Code__c</fullName>
    <label>Language Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>