force-app/main/default/objects/Account/fields/LastContractSyncAPIDate__c.field-meta.xml
<CustomField>
    <fullName>LastContractSyncAPIDate__c</fullName>
    <description>This field is used to store the last contract Sync API Date</description>
    <label>LastContractSyncAPIDate</label>
    <type>DateTime</type>
</CustomField>