force-app/main/default/objects/Account/fields/Legal_Entity_After__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_After__c</fullName>
    <label>Legal Entity After</label>
    <length>255</length>
    <type>Text</type>
</CustomField>