force-app/main/default/objects/Account/fields/Legal_Entity_Before__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Before__c</fullName>
    <label>Legal Entity Before</label>
    <length>255</length>
    <type>Text</type>
</CustomField>