force-app/main/default/objects/Account/fields/Migration_Id__c.field-meta.xml
<CustomField>
    <fullName>Migration_Id__c</fullName>
    <description>Source system primary key</description>
    <label>Migration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>