force-app/main/default/objects/Account/fields/MigrationId__c.field-meta.xml
<CustomField>
    <fullName>MigrationId__c</fullName>
    <description>Source system primary key</description>
    <externalId>true</externalId>
    <label>Migration Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>