force-app/main/default/objects/Account/fields/National_Security__c.field-meta.xml
<CustomField>
    <fullName>National_Security__c</fullName>
    <description>Any imposed law that the company fall in</description>
    <label>National Security</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Applicable</fullName>
            </value>
            <value>
                <fullName>Non Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>