force-app/main/default/objects/Account/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <description>Primary payment mode of the company</description>
    <inlineHelpText>Primary payment mode of the company</inlineHelpText>
    <label>Payment Mode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>