force-app/main/default/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>It has been created for the SAP Account Registration Form.</description>
    <label>Payment Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>