force-app/main/default/objects/Account/fields/Plant_Code_Plant_No__c.field-meta.xml
<CustomField>
    <fullName>Plant_Code_Plant_No__c</fullName>
    <label>Plant Code (Plant No.)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>