force-app/main/default/objects/Account/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <description>It has been created for SAP Account Registration Form</description>
    <label>Sales Organization</label>
    <length>255</length>
    <type>Text</type>
</CustomField>