force-app/main/default/objects/Account/fields/Short_Name_Local__c.field-meta.xml
<CustomField>
    <fullName>Short_Name_Local__c</fullName>
    <description>Abbreviation in Local Language</description>
    <label>Short Name (Local)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>