force-app/main/default/objects/Account/fields/Street_Local__c.field-meta.xml
<CustomField>
    <fullName>Street_Local__c</fullName>
    <description>Company Street in Local Language</description>
    <label>Street (Local)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>