force-app/main/default/objects/Account/fields/System_API_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>System_API_Last_Sync_Date__c</fullName>
    <label>System API Last Sync Date</label>
    <type>DateTime</type>
</CustomField>