force-app/main/default/objects/Account/fields/Tax_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reg_No__c</fullName>
    <description>It has been created for a common registration form PDF template.</description>
    <label>Tax Reg No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>