force-app/main/default/objects/Account/fields/YODA_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>YODA_Account_Number__c</fullName>
    <displayFormat>YAC-{000000}</displayFormat>
    <externalId>true</externalId>
    <label>YODA Account Number</label>
    <type>AutoNumber</type>
</CustomField>