force-app/main/default/objects/Account/validationRules/YODA_Account_Information_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Account_Information_Validation</fullName>
    <active>true</active>
    <description>Ensure sales users enter a minimum amount of information upon creating or updating an Account.</description>
    <errorConditionFormula>AND(
 /*CONTAINS( $Profile.Name , &apos;YODA&apos;),*/
 NOT($Setup.Bypass_Settings__c.Bypass_Validation_Rules__c),
 OR(
  ISBLANK( ShippingCity ),
  ISBLANK( ShippingPostalCode ),
  ISBLANK( ShippingCountry )
 )
)</errorConditionFormula>
    <errorMessage>Please ensure to populate the Visit Address.</errorMessage>
</ValidationRule>