force-app/main/default/objects/Account/validationRules/YODA_Pending_Accounts_Sales_Permission.validationRule-meta.xml
<ValidationRule>
    <fullName>YODA_Pending_Accounts_Sales_Permission</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 NOT( $Setup.Bypass_Settings__c.Bypass_Validation_Rules__c),
 NOT( $Permission.YODA_Activate_Pending_Accounts ),
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c,&apos;Active&apos;),
  ISPICKVAL(PRIORVALUE(Status__c),&apos;Pending&apos;)
)</errorConditionFormula>
    <errorMessage>Sales operations users are only allowed to change Account status from Pending to Active.</errorMessage>
</ValidationRule>