force-app/main/default/objects/Account/listViews/Account_By_Type.listView-meta.xml
<ListView>
    <fullName>Account_By_Type</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Industry__c</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Accounts By Industry/Type/Country/RHQ</label>
</ListView>