force-app/main/default/objects/Account/listViews/Accounts_by_Industry.listView-meta.xml
<ListView>
    <fullName>Accounts_by_Industry</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ACCOUNT.INDUSTRY</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>Accounts by Industry</label>
</ListView>