force-app/main/default/objects/Account/listViews/Accounts_Created_in_the_Last_Month.listView-meta.xml
<ListView>
    <fullName>Accounts_Created_in_the_Last_Month</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Industry__c</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>LAST_MONTH</value>
    </filters>
    <label>Accounts Created in the Last Month</label>
</ListView>