force-app/main/default/objects/Account/listViews/Accounts_No_Activity_Last_12_Months.listView-meta.xml
<ListView>
    <fullName>Accounts_No_Activity_Last_12_Months</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>Industry__c</columns>
    <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.LAST_ACTIVITY</field>
        <operation>lessThan</operation>
        <value>LAST_N_MONTHS:12</value>
    </filters>
    <label>Accounts No Activity Last 12 Months</label>
</ListView>